# gemma-agent

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  build.sh  gemma4.py  pressure.sh  test.sh
gemma-native/: build.sh
gemma-native/src/: main.rs
python/: gemma_agent.py
rust/: Cargo.toml  build.sh
rust/src/: main.rs
src/: main.rs
