[package]
name = "gemma-agent"
version = "0.1.0"
edition = "2021"
description = "Self-contained Gemma 4 agent with embedded GGUF weights"

[dependencies]
llama-cpp-2 = "0.1"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
anyhow = "1"

[features]
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]
vulkan = ["llama-cpp-2/vulkan"]

[profile.release]
opt-level = 3
lto = true
strip = true
